# Diffcoal

./: .clang-format  CMakeLists.txt  README.md  sources.cmake
include/diffcoal/: fwd.hpp  pch.hpp
include/diffcoal/collision/: collision.hpp  collision.hxx  collision.txx  fwd.hpp
include/diffcoal/core/: base.hpp  fwd.hpp
include/diffcoal/utils/: fwd.hpp  helpers.hpp  logger.hpp  mesh_io.hpp  mesh_io.hxx  openmp.hpp  rotation_util.hpp
src/: CMakeLists.txt
src/collision/: collision.cpp
tests/: miniball_example.cpp  miniball_example_containers.cpp
